# little-cat

./: Cargo.toml  README.md  VULKANO_VS_WGPU.md  scene.json
assets/shaders/: unlit-mesh.vert
src/: main.rs
src/engine/: animation_loop.rs  camera.rs  mod.rs  networking.rs  rendering_inspector.rs  universe.rs  user_input.rs  windowing.rs  xr.rs
src/engine/ecs/: command_queue.rs  component.rs  component_codec.rs  entity.rs  mod.rs  system.rs  world_graph_tests.rs
src/engine/ecs/component/: camera.rs  camera2d.rs  camera3d.rs  color.rs  cursor.rs  input.rs  input_transform_mode.rs  instance.rs  lit_voxel.rs  mod.rs  point_light.rs  renderable.rs  texture.rs  transform.rs  uv.rs
src/engine/ecs/system/: camera_system.rs  cursor_system.rs  input_system.rs  light_system.rs  lit_voxel_system.rs  mod.rs  renderable_system.rs  system_world.rs  texture_system.rs  transform_system.rs
src/engine/graphics/: mesh.rs  mod.rs  pipeline_descriptor_set_layouts.rs  primitives.rs  render_assets.rs  render_info.rs  renderer.rs  shaders.rs  spirv_reflect.rs  visual_world.rs  vulkano_renderer.rs
src/engine/graphics/shaders/: compile-shaders  gradient.frag  toon-mesh.frag  toon-mesh.vert  triangle.frag  triangle.vert  unlit-mesh.vert
src/engine/graphics/shaders/fragment/: unlit-shader.glsl
src/engine/graphics/shaders/spv/: gradient.frag.spv  toon-mesh.frag.spv  toon-mesh.vert.spv  triangle.vert.spv  unlit-mesh.frag.spv  unlit-mesh.vert.spv
src/engine/graphics/shaders/vertex/: fullscreen-triangle.glsl
src/utils/: logger.rs  math.rs
