[package]
name = "little-cat"
version = "0.1.0"
edition = "2024"

[dependencies]
rspirv = "0.12"
ash = "0.38"
ash-window = "0.13"
raw-window-handle = "0.6"

image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
openxr = "0.19"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "json"] }
winit = "0.30"
slotmap = "1.0.7"
