[package]
name = "little-cat"
version = "0.1.0"
edition = "2024"

[dependencies]
rspirv = "0.12"

vulkano = "0.35"
vulkano-shaders = "0.35"
vulkano-util = "0.35"

image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
openxr = "0.19"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "json"] }
winit = "0.30"
slotmap = "1.0.7"
